[project]
name = "hyengine"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Neagaru",email = "daniel@neagaru.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "hy (>=1.2.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
